--- a/src/Components/VideoCards.css
+++ b/src/Components/VideoCards.css
@@ -5,24 +5,22 @@
 .container {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    align-items: center;
     justify-items: center;
-    gap: 0;
 }
 
 .title {
     font-family: sans-serif;
     font-size: 17px;
-    text-align: justify;
+    text-align: center;
     width: 300px;
 }
 
 
 .videocard  {
+    width: 300px;
     padding: 12px;
     margin: 2px;
     transition: all .2s ease-in-out; 
-    
 }
 
 .videocard:hover { 
@@ -32,7 +30,6 @@
 }
 
 .image {
-    margin: 10px;
     height: 300px;
 }
 .wrapper-results {
